Moved rendering around to have items layout in the desired order